# Rivn

./: CMakeLists.txt  all_syntax_test.rn
ast/: ast.hpp
cli/: main.cpp
codegen/: codegen.hpp
debugger/: debugger.hpp
doc_generator/: doc_generator.hpp
formatter/: formatter.hpp
hir/: hir.hpp
language_server/: lsp.hpp
lexer/: lexer.cpp  lexer.hpp
linter/: linter.hpp
lir/: lir.hpp
mir/: mir.hpp
optimizer/: optimizer.hpp
package_manager/: pkg.hpp
parser/: parser.cpp  parser.hpp
profiler/: profiler.hpp
runtime/: runtime.hpp
semantic/: semantic.cpp  semantic.hpp
stdlib/: core.hr  io.hr
test_framework/: test_framework.hpp
